# fortune_tracer

./: .coverage  .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
backend/: main.py
backend/api/: schemas.py
docs/: api.md  bazi-basics.md  structure.md
frontend/: api_client.py
frontend/pages/: __init__.py  bazi_page.py
src/: __init__.py
src/ai/: __init__.py  chat.py  config.py  interpreter.py  prompts.py  serializer.py  session.py
src/core/: __init__.py  auxiliary.py  bonefate.py  cache.py  calendar.py  cities_data.py  city_search.py  compatibility.py  config.py  daily_fortune.py  daily_fortune_engine.py  daily_fortune_report.py  date_selection.py  dayun.py  dimension_advice.py  dimension_calculators.py  dimension_scorer.py  fortune_interpreter.py  hour_fortune.py  jieqi.py  liunian.py  liunian_data.py  logging.py  nayin.py  pillars.py  shensha.py  shensha_data.py  shishen.py  solar_time.py  wuxing.py
src/models/: __init__.py  bazi_models.py  bonefate_models.py  compatibility_models.py  daily_fortune_models.py  date_selection_models.py  ziwei_models.py
src/ui/: __init__.py  ai_interpretation.py  bazi_components.py  bazi_page.py  bonefate_page.py  chat_component.py  city_selector.py  common.py  compatibility_page.py  daily_fortune_component.py  daily_fortune_full.py  date_selection_page.py  forms.py  fortune_components.py  ziwei_page.py
src/viz/: __init__.py  charts.py  compatibility_charts.py  date_charts.py  dayun_charts.py  kline_generator.py  kline_multiplier.py  palace.py  shishen_charts.py  (+1 more)
tests/: __init__.py  conftest.py  test_advanced_features.py  test_ai_modules.py  test_api.py  test_auxiliary.py  test_bonefate.py  test_compatibility.py  test_core_modules.py  test_date_selection.py  test_new_features.py  test_pillars.py  test_wuxing.py
(+44 files in other folders)
