[project]
name = "fortune-tracer"
version = "0.1.0"
description = "生辰八字AI解读Web应用"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "lunarcalendar>=0.0.9",
    "pytz>=2023.3",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

